--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: java
 jdk:
 - oraclejdk7
 - openjdk6
+script:
+- mvn clean install -Dmaven.test.skip=true
 deploy:
   provider: appfog
   email: zjh459@gmail.com
