--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
 - oraclejdk7
 - openjdk6
 script:
-- mvn clean install -Dmaven.test.skip=true
+- mvn package
 deploy:
   provider: appfog
   email: zjh459@gmail.com
