--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ language: java
 jdk:
 - oraclejdk7
 - openjdk6
-script:
-- cd target
-- af update oftest3
 deploy:
   provider: appfog
   email: zjh459@gmail.com
@@ -14,3 +11,5 @@ deploy:
   on:
     repo: zjh459/git-projects
   skip_cleanup: true
+after_deploy:
+- cd /home/travis/build/zjh459/git-projects/target/ && af update oftest3
