--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: java
 jdk:
 - oraclejdk7
 - openjdk6
+after_success:
+  - cp target/git-projects.war
 deploy:
   provider: appfog
   email: zjh459@gmail.com
@@ -11,5 +13,5 @@ deploy:
   on:
     repo: zjh459/git-projects
   skip_cleanup: true
-after_deploy:
-- cd /home/travis/build/zjh459/git-projects/target/ && af update oftest3
+#after_deploy:
+#- cd /home/travis/build/zjh459/git-projects/target/ && af update oftest3
